added the designed and developed by part, hero description change and added the names in the follow us links

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./great.jpg" sizes="16x16 32x32 48x48" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/great.jpg" sizes="180x180">
+
+    <meta
+      name="description"
+      content="Great Designs is a creative space dedicated to crafting unique, high-quality bags that are both stylish and functional. Whether it’s handbags, backpacks, or everyday carryalls, we focus on creating pieces that are beautiful, practical, and built to last. With a passion for creativity and a commitment to quality, we bring your ideas to life through thoughtful and meaningful designs."
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <title>Great Designs</title>
   </head>
   <body>
     <div id="root"></div>
